infra/k8s/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-manager-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-manager-db
  template:
    metadata:
      labels:
        app: task-manager-db
    spec:
      containers:
        - name: task-manager-db
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: task-manager-db
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: task-manager-db
