infra/k8s/mongo-deployment.yaml
# mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-manager-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-manager-db
  template:
    metadata:
      labels:
        app: task-manager-db
    spec:
      containers:
        - name: task-manager-db
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: task-manager-db
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: task-manager-db
