infra/k8s/notification-service-deployment.yaml
# notification-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: hazitgi/notifications
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  ports:
    - port: 4000
      targetPort: 4000
  selector:
    app: notification-service

---
# apiVersion: v1
# kind: Service
# metadata:
#   name: notification-nodeport-service
# spec:
#   ports:
#     - port: 4000
#       targetPort: 4000
#       nodePort: 30001 # You can specify your preferred node port here
#   selector:
#     app: notification-service
#   type: NodePort
