infra/k8s/task-manager-deployment.yaml
# task-manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-manager-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-manager-service
  template:
    metadata:
      labels:
        app: task-manager-service
    spec:
      containers:
        - name: task-manager-service
          image: hazitgi/task
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: task-manager-service
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: task-manager-service

---
# apiVersion: v1
# kind: Service
# metadata:
#   name: task-nodeport-service
# spec:
#   ports:
#     - port: 5000
#       targetPort: 5000
#       nodePort: 30002 # You can specify your preferred node port here
#   selector:
#     app: task-service
#   type: NodePort
